--- a/app/src/main/res/layout/activity_detail_india.xml
+++ b/app/src/main/res/layout/activity_detail_india.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailCountryActivity"
-    android:orientation="vertical">
+    tools:context=".DetailIndiaActivity">
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -57,7 +57,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
-                        android:text="Cases"/>
+                        android:text="Confirmed"/>
 
                 </LinearLayout>
 
@@ -169,7 +169,8 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="GLOBAL STATS"
+                        android:id="@+id/stateStats"
+                        android:text="STATE STATS"
                         android:textSize="25dp"
                         android:textStyle="bold"
                         android:layout_marginTop="10dp"
@@ -185,45 +186,6 @@
                         android:layout_marginRight="20dp"
                         />
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginBottom="10dp"
-                        >
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-black"
-                            android:textStyle="bold"
-                            android:text="Country"
-                            android:textSize="18sp"/>
-
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:id="@+id/zCountry"
-                            android:textAlignment="textEnd"
-                            android:textColor="@color/color_one"
-                            android:layout_marginRight="15dp"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_alignParentRight="true"/>
-
-                    </RelativeLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/color_two"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="20dp"
-                        />
-
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -238,14 +200,14 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-black"
                             android:textStyle="bold"
-                            android:text="Total Cases"
+                            android:text="State"
                             android:textSize="18sp"/>
 
                         <TextView
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:id="@+id/zCases"
+                            android:id="@+id/aState"
                             android:textAlignment="textEnd"
                             android:textColor="@color/color_one"
                             android:layout_marginRight="15dp"
@@ -277,92 +239,14 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-black"
                             android:textStyle="bold"
-                            android:text="Today Cases"
+                            android:text="Confirmed"
                             android:textSize="18sp"/>
 
                         <TextView
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:id="@+id/zTodayCases"
-                            android:textAlignment="textEnd"
-                            android:textColor="@color/color_one"
-                            android:layout_marginRight="15dp"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_alignParentRight="true"/>
-
-                    </RelativeLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/color_two"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="20dp"
-                        />
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginBottom="10dp"
-                        >
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-black"
-                            android:textStyle="bold"
-                            android:text="Deaths"
-                            android:textSize="18sp"/>
-
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:id="@+id/zDeaths"
-                            android:textAlignment="textEnd"
-                            android:textColor="@color/color_one"
-                            android:layout_marginRight="15dp"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:layout_alignParentRight="true"/>
-
-                    </RelativeLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/color_two"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="20dp"
-                        />
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginBottom="10dp"
-                        >
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif-black"
-                            android:textStyle="bold"
-                            android:text="Todays Death"
-                            android:textSize="18sp"/>
-
-                        <TextView
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:text="0"
-                            android:id="@+id/ztodayDeath"
+                            android:id="@+id/aConfirmed"
                             android:textAlignment="textEnd"
                             android:textColor="@color/color_one"
                             android:layout_marginRight="15dp"
@@ -401,7 +285,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:id="@+id/zRecovered"
+                            android:id="@+id/arecovered"
                             android:textAlignment="textEnd"
                             android:textColor="@color/color_one"
                             android:layout_marginRight="15dp"
@@ -419,6 +303,7 @@
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="20dp"
                         />
+
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -440,7 +325,83 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:id="@+id/zActive"
+                            android:id="@+id/aActive"
+                            android:textAlignment="textEnd"
+                            android:textColor="@color/color_one"
+                            android:layout_marginRight="15dp"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_alignParentRight="true"/>
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/color_two"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
+                        />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="sans-serif-black"
+                            android:textStyle="bold"
+                            android:text="Death"
+                            android:textSize="18sp"/>
+
+                        <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:id="@+id/aDeath"
+                            android:textAlignment="textEnd"
+                            android:textColor="@color/color_one"
+                            android:layout_marginRight="15dp"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_alignParentRight="true"/>
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/color_two"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
+                        />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="sans-serif-black"
+                            android:textStyle="bold"
+                            android:text="Last updated"
+                            android:textSize="18sp"/>
+
+                        <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:id="@+id/aLastUpdatedTime"
                             android:textAlignment="textEnd"
                             android:textColor="@color/color_one"
                             android:layout_marginRight="15dp"
@@ -472,14 +433,14 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-black"
                             android:textStyle="bold"
-                            android:text="Critical"
+                            android:text="Delta Confirmed"
                             android:textSize="18sp"/>
 
                         <TextView
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:text="0"
-                            android:id="@+id/zCritical"
+                            android:id="@+id/aDeltaConfirmed"
                             android:textAlignment="textEnd"
                             android:textColor="@color/color_one"
                             android:layout_marginRight="15dp"
@@ -498,7 +459,83 @@
                         android:layout_marginRight="20dp"
                         />
 
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="sans-serif-black"
+                            android:textStyle="bold"
+                            android:text="Delta Death"
+                            android:textSize="18sp"/>
 
+                        <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:id="@+id/aDeltaDeath"
+                            android:textAlignment="textEnd"
+                            android:textColor="@color/color_one"
+                            android:layout_marginRight="15dp"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_alignParentRight="true"/>
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/color_two"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
+                        />
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="sans-serif-black"
+                            android:textStyle="bold"
+                            android:text="Delta Recovered"
+                            android:textSize="18sp"/>
+
+                        <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:id="@+id/aDeltaRecovered"
+                            android:textAlignment="textEnd"
+                            android:textColor="@color/color_one"
+                            android:layout_marginRight="15dp"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            android:layout_alignParentRight="true"/>
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/color_two"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="20dp"
+                        />
 
 
 
@@ -521,14 +558,21 @@
 
     </androidx.cardview.widget.CardView>
 
+    <Button
+        android:id="@+id/btn_track_india"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/color_one"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:text="Track District"
 
-
-
-
-
-
-
-
+        android:textSize="16sp"
+        android:padding="5dp"
+        android:onClick="goTrackDistrict"/>
 
 
 
